--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cypress": "^6.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
@@ -16,6 +17,7 @@
     "start-api": "cd ../flask-backend && flask run",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cypress": "cypress open",
     "test-api": "cd ../flask-backend && flask test",
     "eject": "react-scripts eject"
   },
@@ -37,6 +39,5 @@
       "last 1 safari version"
     ]
   },
-
   "proxy": "http://localhost:5000"
 }
